@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-19T00:31:07Z",
-  "count_outdated" : 695,
-  "uniques_outdated" : 333,
+  "timestamp" : "2024-02-20T00:29:25Z",
+  "count_outdated" : 697,
+  "uniques_outdated" : 334,
   "count" : 704,
   "uniques" : 338,
   "clones" : [
-    {
-      "timestamp": "2024-02-05T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-06T00:00:00Z",
       "count": 2,
